css/custom.css
@import url(http://fonts.googleapis.com/css?family=Lato:400,700);

/*****************************************/
/* Making background colors match mockup */
/*****************************************/

body {
	background-color: #1f262f;
}

footer {
	background-color: #1b2028;
}

.maincontentarea {
	background-color: #222b35;
}


/*****************************************/
/*                 Text                  */
/*****************************************/

* {
	color: #f5f5f5;
}

h1,h2 {
	font-family: 'Lato', sans-serif;
	font-weight: 700;
	font-size: 2em;
	color: #f5f5f5;
}

h1 {
	margin-top: 1em;
	margin-bottom: 0.5em;
}

h2 {
	font-size: 1.5em;
}


/*****************************************/
/*                 Header                */
/*****************************************/

.header {
	background-color: #359eee;
	margin-top: 30px;
	margin-bottom: 30px;
}



	/*****************************************/
	/*                Menubar                */
	/*****************************************/
	
	.menu {
		list-style-type: none;
		display: block;
		margin: 0; /*Correction of ul, ol {margin: 26px 0 36px 0;} in base.css from amazium */
		text-align: right;
		font-size: 0; /*Removes space inserted by inline-block*/
	}

	.menu-item{
		display: inline-block;
		background-image: none; /*Correction of ul li { background: transparent url('../img/bullet.png') no-repeat 0 3px;} in base.css from amazium */
		margin: 0;
		padding: 0;
		font-size: 14px;

	}

	.menu-item a{
		display: block;
		color: #f5f5f5;
		text-decoration: none;
		font-family: 'Lato', sans-serif;
		font-weight: 700;
		text-transform: uppercase;
		padding: 1.5em 1em;
		font-size: 1em;
		margin: 0;
	}

	.menu-item a:hover{
		background-color: #104f30;
	}

/*****************************************/
/*                Sidebar                */
/*****************************************/

.sidebar{
	height: 400px;
	background-color: #4b5e73;
}

/*****************************************/
/*             Temporary css             */
/*****************************************/




.red{
	height: 400px;
	background-color: blue;
}
.yellow{
	height: 200px;
	background-color: yellow;
}

/*****************************************/
/*      Formating fields and images      */
/*****************************************/

img {
	max-width: 100%;
}

.widget {
	list-style: none;
}

.iframe_tshirt {
	width: 810px;
	height: 300px;
	padding: 0;
	border: none;
}

